Fixed(?) user-name spill on pre3
Haven't checked this on TP, but this fixes the break on the Pre3 where
the user-name spills over the right edge.

--- a/stylesheets/phnx.css
+++ b/stylesheets/phnx.css
@@ -636,15 +636,14 @@ body.no-gesture {  /* touchpad/emulator */
 }
 
 @media only screen and (orientation:portrait){
-	.content-wrapper {
+	.large-device .content-wrapper {
 		width: 343px;
 	}
 
-	.showAvatar .content-wrapper {
+	.large-device .showAvatar .content-wrapper {
 		width: 279px;
 	}
 }
-
 
 
 .inline-thumb{
